--- a/index.html
+++ b/index.html
@@ -1,65 +1,399 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="/">
-
+<html lang="en">
   <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
-
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="attendance_system">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
-
-  <title>attendance_system</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A beautiful Material Design Flutter landing page">
+  <title>Activity Guide</title>
+  <link rel="icon" href="favicon.png" type="image/png">
   <link rel="manifest" href="manifest.json">
 
-  <!-- This script adds the flutter initialization JS code -->
-  <script src="flutter.js" defer></script>
-</head>
-<body>
-  <script>
-(()=>{var L=()=>navigator.vendor==="Google Inc."||navigator.agent==="Edg/",W=()=>typeof ImageDecoder>"u"?!1:L(),E=()=>typeof Intl.v8BreakIterator<"u"&&typeof Intl.Segmenter<"u",P=()=>{let s=[0,97,115,109,1,0,0,0,1,5,1,95,1,120,0];return WebAssembly.validate(new Uint8Array(s))},p={hasImageCodecs:W(),hasChromiumBreakIterators:E(),supportsWasmGC:P(),crossOriginIsolated:window.crossOriginIsolated};function u(...s){return new URL(S(...s),document.baseURI).toString()}function S(...s){return s.filter(t=>!!t).map((t,i)=>i===0?_(t):j(_(t))).filter(t=>t.length).join("/")}function j(s){let t=0;for(;t<s.length&&s.charAt(t)==="/";)t++;return s.substring(t)}function _(s){let t=s.length;for(;t>0&&s.charAt(t-1)==="/";)t--;return s.substring(0,t)}function b(s,t){return s.canvasKitBaseUrl?s.canvasKitBaseUrl:t.engineRevision&&!t.useLocalCanvasKit?S("https://www.gstatic.com/flutter-canvaskit",t.engineRevision):"canvaskit"}var h=class{constructor(){this._scriptLoaded=!1}setTrustedTypesPolicy(t){this._ttPolicy=t}async loadEntrypoint(t){let{entrypointUrl:i=u("main.dart.js"),onEntrypointLoaded:r,nonce:e}=t||{};return this._loadJSEntrypoint(i,r,e)}async load(t,i,r,e,n){n??=o=>{o.initializeEngine(r).then(l=>l.runApp())};let{entryPointBaseUrl:a}=r;if(t.compileTarget==="dart2wasm")return this._loadWasmEntrypoint(t,i,a,n);{let o=t.mainJsPath??"main.dart.js",l=u(a,o);return this._loadJSEntrypoint(l,n,e)}}didCreateEngineInitializer(t){typeof this._didCreateEngineInitializerResolve=="function"&&(this._didCreateEngineInitializerResolve(t),this._didCreateEngineInitializerResolve=null,delete _flutter.loader.didCreateEngineInitializer),typeof this._onEntrypointLoaded=="function"&&this._onEntrypointLoaded(t)}_loadJSEntrypoint(t,i,r){let e=typeof i=="function";if(!this._scriptLoaded){this._scriptLoaded=!0;let n=this._createScriptTag(t,r);if(e)console.debug("Injecting <script> tag. Using callback."),this._onEntrypointLoaded=i,document.head.append(n);else return new Promise((a,o)=>{console.debug("Injecting <script> tag. Using Promises. Use the callback approach instead!"),this._didCreateEngineInitializerResolve=a,n.addEventListener("error",o),document.head.append(n)})}}async _loadWasmEntrypoint(t,i,r,e){if(!this._scriptLoaded){this._scriptLoaded=!0,this._onEntrypointLoaded=e;let{mainWasmPath:n,jsSupportRuntimePath:a}=t,o=u(r,n),l=u(r,a);this._ttPolicy!=null&&(l=this._ttPolicy.createScriptURL(l));let m=WebAssembly.compileStreaming(fetch(o)),c=await import(l),w;t.renderer==="skwasm"?w=(async()=>{let d=await i.skwasm;return window._flutter_skwasmInstance=d,{skwasm:d.wasmExports,skwasmWrapper:d,ffi:{memory:d.wasmMemory}}})():w={};let f=await c.instantiate(m,w);await c.invoke(f)}}_createScriptTag(t,i){let r=document.createElement("script");r.type="application/javascript",i&&(r.nonce=i);let e=t;return this._ttPolicy!=null&&(e=this._ttPolicy.createScriptURL(t)),r.src=e,r}};async function T(s,t,i){if(t<0)return s;let r,e=new Promise((n,a)=>{r=setTimeout(()=>{a(new Error(`${i} took more than ${t}ms to resolve. Moving on.`,{cause:T}))},t)});return Promise.race([s,e]).finally(()=>{clearTimeout(r)})}var v=class{setTrustedTypesPolicy(t){this._ttPolicy=t}loadServiceWorker(t){if(!t)return console.debug("Null serviceWorker configuration. Skipping."),Promise.resolve();if(!("serviceWorker"in navigator)){let o="Service Worker API unavailable.";return window.isSecureContext||(o+=`
-The current context is NOT secure.`,o+=`
-Read more: https://developer.mozilla.org/en-US/docs/Web/Security/Secure_Contexts`),Promise.reject(new Error(o))}let{serviceWorkerVersion:i,serviceWorkerUrl:r=u(`flutter_service_worker.js?v=${i}`),timeoutMillis:e=4e3}=t,n=r;this._ttPolicy!=null&&(n=this._ttPolicy.createScriptURL(n));let a=navigator.serviceWorker.register(n).then(o=>this._getNewServiceWorker(o,i)).then(this._waitForServiceWorkerActivation);return T(a,e,"prepareServiceWorker")}async _getNewServiceWorker(t,i){if(!t.active&&(t.installing||t.waiting))return console.debug("Installing/Activating first service worker."),t.installing||t.waiting;if(t.active.scriptURL.endsWith(i))return console.debug("Loading from existing service worker."),t.active;{let r=await t.update();return console.debug("Updating service worker."),r.installing||r.waiting||r.active}}async _waitForServiceWorkerActivation(t){if(!t||t.state==="activated")if(t){console.debug("Service worker already active.");return}else throw new Error("Cannot activate a null service worker!");return new Promise((i,r)=>{t.addEventListener("statechange",()=>{t.state==="activated"&&(console.debug("Activated new service worker."),i())})})}};var y=class{constructor(t,i="flutter-js"){let r=t||[/\.js$/,/\.mjs$/];window.trustedTypes&&(this.policy=trustedTypes.createPolicy(i,{createScriptURL:function(e){if(e.startsWith("blob:"))return e;let n=new URL(e,window.location),a=n.pathname.split("/").pop();if(r.some(l=>l.test(a)))return n.toString();console.error("URL rejected by TrustedTypes policy",i,":",e,"(download prevented)")}}))}};var g=s=>{let t=WebAssembly.compileStreaming(fetch(s));return(i,r)=>((async()=>{let e=await t,n=await WebAssembly.instantiate(e,i);r(n,e)})(),{})};var I=(s,t,i,r)=>(window.flutterCanvasKitLoaded=(async()=>{if(window.flutterCanvasKit)return window.flutterCanvasKit;let e=i.hasChromiumBreakIterators&&i.hasImageCodecs;if(!e&&t.canvasKitVariant=="chromium")throw"Chromium CanvasKit variant specifically requested, but unsupported in this browser";let n=e&&t.canvasKitVariant!=="full",a=r;n&&(a=u(a,"chromium"));let o=u(a,"canvaskit.js");s.flutterTT.policy&&(o=s.flutterTT.policy.createScriptURL(o));let l=g(u(a,"canvaskit.wasm")),m=await import(o);return window.flutterCanvasKit=await m.default({instantiateWasm:l}),window.flutterCanvasKit})(),window.flutterCanvasKitLoaded);var U=async(s,t,i,r)=>{let e=u(r,"skwasm.js"),n=e;s.flutterTT.policy&&(n=s.flutterTT.policy.createScriptURL(n));let a=g(u(r,"skwasm.wasm"));return await(await import(n)).default({instantiateWasm:a,locateFile:(l,m)=>{let c=m+l;return c.endsWith(".worker.js")?URL.createObjectURL(new Blob([`importScripts('${c}');`],{type:"application/javascript"})):c},mainScriptUrlOrBlob:e})};var k=class{async loadEntrypoint(t){let{serviceWorker:i,...r}=t||{},e=new y,n=new v;n.setTrustedTypesPolicy(e.policy),await n.loadServiceWorker(i).catch(o=>{console.warn("Exception while loading service worker:",o)});let a=new h;return a.setTrustedTypesPolicy(e.policy),this.didCreateEngineInitializer=a.didCreateEngineInitializer.bind(a),a.loadEntrypoint(r)}async load({serviceWorkerSettings:t,onEntrypointLoaded:i,nonce:r,config:e}={}){e??={};let n=_flutter.buildConfig;if(!n)throw"FlutterLoader.load requires _flutter.buildConfig to be set";let a=d=>{switch(d){case"skwasm":return p.crossOriginIsolated&&p.hasChromiumBreakIterators&&p.hasImageCodecs&&p.supportsWasmGC;default:return!0}},o=(d,C)=>{switch(d.renderer){case"auto":return C=="canvaskit"||C=="html";default:return d.renderer==C}},l=d=>d.compileTarget==="dart2wasm"&&!p.supportsWasmGC||e.renderer&&!o(d,e.renderer)?!1:a(d.renderer),m=n.builds.find(l);if(!m)throw"FlutterLoader could not find a build compatible with configuration and environment.";let c={};c.flutterTT=new y,t&&(c.serviceWorkerLoader=new v,c.serviceWorkerLoader.setTrustedTypesPolicy(c.flutterTT.policy),await c.serviceWorkerLoader.loadServiceWorker(t).catch(d=>{console.warn("Exception while loading service worker:",d)}));let w=b(e,n);m.renderer==="canvaskit"?c.canvasKit=I(c,e,p,w):m.renderer==="skwasm"&&(c.skwasm=U(c,e,p,w));let f=new h;return f.setTrustedTypesPolicy(c.flutterTT.policy),this.didCreateEngineInitializer=f.didCreateEngineInitializer.bind(f),f.load(m,c,e,r,i)}};window._flutter||(window._flutter={});window._flutter.loader||(window._flutter.loader=new k);})();
-//# sourceMappingURL=flutter.js.map
+  <style>
+    :root {
+      --primary-color: #067329;
+      --primary-dark: #055d26;
+      --text: #333333;
+      --bg: #ffffff;
+      --card: #f9f9f9;
+      --accent: #FF3D00;
+      --hover-color: #055d26;
+    }
 
-if (!window._flutter) {
-  window._flutter = {};
+    [data-theme="dark"] {
+      --bg-color: #121212;
+      --text-color: #e0e0e0;
+      --card-bg: #1e1e1e;
+    }
+
+    body.dark {
+      --primary: #00c853;
+      --text: #f1f1f1;
+      --bg: #121212;
+      --card: #1e1e1e;
+    }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      padding: 0 16px;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 20px 0;
+      animation: fadeIn 1s ease-in;
+    }
+
+    .appbar {
+      background-color: var(--bg);
+      padding: 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .appbar .title {
+      font-size: 24px;
+      font-weight: bold;
+      color: var(--primary);
+    }
+
+    .title span {
+      background-color: var(--primary-color);
+      color: white;
+      padding: 4px 8px;
+    }
+
+    .hamburger {
+      display: none;
+      font-size: 24px;
+      background: none;
+      border: none;
+      cursor: pointer;
+      color: var(--primary-color);
+    }
+
+    .nav-menu {
+      display: flex;
+      gap: 16px;
+      align-items: center;
+    }
+
+    .nav-menu a {
+      text-decoration: none;
+      color: var(--primary);
+      font-weight: 500;
+    }
+
+    .launch-btn {
+      background-color: var(--primary-color);
+      color: white;
+      border: none;
+      padding: 8px 16px;
+      border-radius: 20px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .launch-btn:hover {
+      background-color: var(--primary-dark);
+    }
+
+    .welcome-note {
+     margin-top: 24px;
+      text-align: center;
+      animation: fadeIn 1s ease;
+    }
+
+    main {
+      max-width: 1200px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .welcome-note p {
+      font-size: 24px;
+      font-weight: 600;
+      text-align: justify;
+      margin: 40px 0;
+      animation: slideUp 1s ease-in;
+    }
+     .launch-button {
+      display: inline-block;
+      background-color: var(--primary-color);
+      color: white;
+      padding: 12px 24px;
+      border-radius: 8px;
+      font-weight: bold;
+      text-decoration: none;
+      transition: background-color 0.3s;
+      margin-top: 16px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+
+    .launch-button:hover {
+      background-color: var(--hover-color);
+    }
+
+     .features {
+      margin-top: 48px;
+    }
+
+    .features h2 {
+      font-size: 28px;
+      color: var(--primary-color);
+      font-weight: bold;
+      text-align: center;
+      margin-bottom: 24px;
+    }
+
+    .feature-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 24px;
+    }
+
+    .feature-card {
+      padding: 16px;
+      background-color: var(--card-bg);
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      transition: transform 0.3s;
+      animation: fadeIn 1s ease-in;
+    }
+
+    .feature-card:hover {
+      transform: translateY(-5px);
+    }
+
+    .feature-card h3 {
+      font-size: 20px;
+      color: var(--primary-color);
+      font-weight: bold;
+    }
+
+    .feature-card p {
+      font-size: 16px;
+      margin-top: 8px;
+      text-align: justify;
+    }
+
+    .footer {
+      text-align: center;
+      margin-top: 50px;
+    }
+
+    .company-name {
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .get-started-btn {
+      position: fixed;
+      right: 20px;
+      bottom: 20px;
+      background-color: var(--primary);
+      color: white;
+      font-size: 18px;
+      border: none;
+      border-radius: 25px;
+      padding: 12px;
+      cursor: pointer;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    .get-started-btn:hover {
+      background-color: var(--primary-dark);
+    }
+    .dark-toggle {
+      margin-left: 16px;
+      cursor: pointer;
+      font-size: 20px;
+    }
+
+    #loader .spinner {
+  border: 8px solid #f3f3f3; /* Light grey background */
+  border-top: 8px solid var(--primary-color); /* Primary color for spinner */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin: 0 auto;
 }
-_flutter.buildConfig = {"engineRevision":"a18df97ca57a249df5d8d68cd0820600223ce262","builds":[{"compileTarget":"dart2js","renderer":"canvaskit","mainJsPath":"main.dart.js"}]};
+
+/* Keyframes for spinner animation */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 
-const loading = document.createElement('div');
-document.body.appendChild(loading);
-loading.textContent = "Loading Entrypoint...";
-_flutter.loader.load({
-  onEntrypointLoaded: async function(engineInitializer) {
-    loading.textContent = "Initializing engine...";
-    const appRunner = await engineInitializer.initializeEngine();
-
-    loading.textContent = "Running app...";
-    await appRunner.runApp();
+@media (max-width: 768px) {
+  .hamburger {
+    display: none;
   }
-});
-  </script> 
-</body>
+
+  .nav-menu {
+    display: flex !important;
+    flex-direction: row;
+    position: static;
+    width: auto;
+    box-shadow: none;
+    padding: 0;
+  }
+}
+      @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+      @keyframes slideUp {
+      from { opacity: 0; transform: translateY(50px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+       @media (max-width: 600px) {
+      .welcome-section h1 {
+        font-size: 28px;
+      }
+      .features h2 {
+        font-size: 24px;
+      }
+      .feature-card h3 {
+        font-size: 18px;
+      }
+    }
+    @media (min-width: 974px) {
+      .feature-cards {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+     </style>
+     </head>
+<body>
+<div class="appbar">
+  <div class="title">
+    <span>ACTIVITY</span> GUIDE
+  </div>
+  <div class="nav-menu">
+    <span class="dark-toggle" onclick="toggleDarkMode()">🌙</span>
+  </div>
+</div>
+
+
+<div class="container">
+  <section class="welcome-note">
+    <p>Welcome to Activity Guide. Our app provides essential tools for effective project management, from comprehensive activity templates to real-time dashboards, ensuring your corporate planning runs smoothly.</p>
+    <div style="margin-top: 16px;">
+      <button class="launch-btn" id="launchButton" onclick="triggerFlutterWeb()">Launch App</button>
+    </div>
+  </section>
+
+  <main>
+    <div id="loader" style="display: none; text-align: center; margin-top: 20px;">
+       <div class="spinner"></div>
+    </div>
+
+    <section class="features">
+    <h2>Features of Activity Guide</h2>
+    <div class="feature-cards">
+      <div class="feature-card">
+        <h3>Activity Guide Template</h3>
+        <p>Leverage customizable templates designed to meet your specific project needs.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Real-time Dashboard</h3>
+        <p>View real-time updates and insights into your project’s progress.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Feedback Collection</h3>
+        <p>Collect valuable feedback from stakeholders to drive project improvement.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Notification Alerts</h3>
+        <p>Stay informed with alerts for important updates and deadlines.</p>
+      </div>
+    </div>
+  </section>
+
+
+  </main>
+
+  <section  class="features">
+    <h2>About Activity Guide</h2>
+    <!-- <div class="feature-card"> -->
+      <div class="feature-card">
+        <h3>Why Activity Guide?</h3>
+        <p>Activity Guide was developed by SmarterWay Solutions Ltd to address the need for structured project execution tools. Our experience in business development and tech innovation drove us to create a simple yet powerful platform for project managers.</p>
+      </div>
+      <div class="feature-card">
+        <h3>Our Vision</h3>
+        <p>We envision a world where every project, no matter the size, benefits from well-structured activity planning. Our goal is to empower teams with the tools they need to deliver successful outcomes efficiently.</p>
+      </div>
+  <!--  </div> -->
+  </section>
+
+  <section class="footer">
+    <p>Powered by</p>
+    <p class="company-name">SmarterWay Solutions Ltd</p>
+  </section>
+</div>
+
+<script src="flutter.js"></script>
+<script>
+
+function triggerFlutterWeb() {
+    // Hide the launch button
+  document.getElementById('launchButton').style.display = 'none';
+  const loader = document.getElementById('loader');
+  loader.style.display = 'block';
+
+  _flutter.buildConfig = {
+    engineRevision: "a18df97ca57a249df5d8d68cd0820600223ce262",
+    builds: [{
+      compileTarget: "dart2js",
+      renderer: "canvaskit",
+      mainJsPath: "main.dart.js"
+    }]
+  };
+
+  _flutter.loader.load({
+    onEntrypointLoaded: async function(engineInitializer) {
+      const appRunner = await engineInitializer.initializeEngine();
+      await appRunner.runApp();
+
+      // Hide the loader
+      loader.style.display = 'none';
+
+      // ✅ Hide the nav bar AFTER the Flutter app has loaded
+      document.querySelector('.appbar').style.display = 'none';
+      document.querySelector('.nav-menu').style.display = 'none';
+    }
+  });
+
+   function toggleDarkMode() {
+    document.body.classList.toggle('dark');
+    localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
+  }
+
+   // Apply theme based on saved preference or system preference
+  window.addEventListener('DOMContentLoaded', () => {
+    const saved = localStorage.getItem('theme');
+    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    if (saved === 'dark' || (!saved && prefersDark)) {
+      document.body.classList.add('dark');
+    }
+  });
+</script>
+
+  </body>
 </html>
